--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,18 @@
 
 <body>
 	<div class="wrapper">
-		@@include('html/header.html')
-		<main>
-			@@include('html/main.html')
+		<main class="pade">
+			@@include('html/header.html')
+				<div class="main-screen">
+					<div class="main-screen__bg ibg">
+						<img src="img/main.jpg" alt=''>
+					</div>
+				</div>
+				@@include('html/main.html')
+			@@include('html/footer.html',{})
 		</main>
-		@@include('html/footer.html',{})
 	</div>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
 	<script src="js/app.min.js"></script>
 </body>
 
